Spring custom AutoScan
